--- a/index - 복사본.html
+++ b/index - 복사본.html
@@ -668,16 +668,13 @@
                                 <p class="text-sm text-gray-600">표준 프로세스/데이터/보안 정책 관리<br/>핵심 시스템(SAP, MES) 운영 및 통합 관리</p>
                             </div>
                             <div class="strategy-arrow">↓ ↑</div>
-                            <div class="flex justify-between items-stretch space-x-0 gap-2 w-full"> <!-- items-stretch와 w-full 추가 -->
+                            <div class="flex justify-around items-center space-x-1">
                                 <div class="strategy-box text-sm flex-1">
                                     <span class="font-bold">국내 거점<br/>(Spoke)</span>
                                 </div>
                                 <div class="strategy-box text-sm flex-1">
                                     <span class="font-bold">미주 거점<br/>(Spoke)</span>
                                 </div>
-				</div>
-
-			<div class="flex justify-between items-stretch space-x-0 gap-2 w-full"> <!-- items-stretch와 w-full 추가 -->
                                 <div class="strategy-box text-sm flex-1">
                                     <span class="font-bold">유럽 거점<br/>(Spoke)</span>
                                 </div>
